# I15J_RCS

./: .gitignore  Dockerfile  README.md  coordinates.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: container.yaml
calibration_ui/: index.html  package-lock.json  package.json
calibration_ui/src/: App.tsx
calibration_ui/src/components/: PointAnnotator.tsx  TrapezoidSelector.tsx
calibration_ui/src/pages/: AnnotatePage.tsx
k8s/: I15J_RCS.yaml  I15J_RCS_ingrs.yaml  I15J_RCS_svc.yaml
src/: Canny_Edge.py  calibration.py  edge_detection.py  main.py  morphology.py  test.py  tst.py
src/test.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py
tests/test_data/: coordinates.json
