[project]
name = "I15J_Robot"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Using computer vision techniques to identify lids from pucks from "
dependencies = [
    "fastcs @ git+https://github.com/DiamondLightSource/FastCS.git"
] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.10"