[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "I15J_RCS"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Using computer vision techniques to identify lids from pucks at the I15-1 Beamline"
dependencies = [
    "opencv-python", 
    "matplotlib", 
    "numpy", 
    "imutils",
    "fastapi[all]",
    "requests",
    "typing",
] 

dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.10"

[project.urls]
GitHub = "https://github.com/TBThomas56/I15J_RCS"

[[project.authors]] # Further authors may be added by duplicating this section
email = "thomas.thomas@diamond.ac.uk"
name = "TBThomas56"